--- a/css/styles.css
+++ b/css/styles.css
@@ -10,13 +10,13 @@
 .line{
     width: 100%;
     height: 20px;
-    background: linear-gradient(to bottom, rgb(49, 49, 49) 0%,rgb(39, 39, 39) 65%,rgb(243, 15, 15) 66%,rgb(243, 15, 15) 100%);
+    background: linear-gradient(to bottom, rgb(49, 49, 49) 0%,rgb(39, 39, 39) 65%,rgb(149, 25, 25) 66%,rgb(149, 25, 25) 100%);
 }
 
 body{
     background: #000;
     background-repeat: no-repeat;
-    background-size: 100vw 100vh;
+    background-size: 100vw;
     background-image: url("../img/fondo.png");
     background-attachment: fixed;
 }
@@ -26,7 +26,7 @@ body{
     margin-left:40px;
     padding: 0;
     align-items: unset;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     height: 80px;
     top:5px;
 }
@@ -35,6 +35,7 @@ body{
     position: relative;
     left: 345px;
     margin-top: 7px;
+    margin-left: 5px;
 }
 
 a:link{
@@ -62,14 +63,14 @@ a:link{
 }
 
 .h1 strong{
-    color: rgb(255, 0, 0);
+    color: rgb(172, 33, 33)
 }
 
 .menu-buttons{
-    margin-left: 7px;
+    margin-left: 5px;
     background: linear-gradient(to bottom, rgb(86, 86, 86) 0%,rgb(47, 48, 48) 50%,rgb(5, 5, 5) 51%,rgb(0, 0, 0) 100%);
     width: 150px;
-    border-radius: 5px;
+    border-radius: 3px;
     height: 35px;
 }
 
