--- a/css/styles.css
+++ b/css/styles.css
@@ -145,27 +145,42 @@ a:link{
 }
 
 /* Another Slider ##############################################################*/
-.move{
-    -moz-animation:move-image 5s;
-    -webkit-animation: move-image 5s ;
-    animation:move-image 10s infinite linear;
+
+.slider-move:nth-child(1){
+    left:0;
+    -moz-animation:move-image1 10s infinite linear;
+    -webkit-animation: move-image1 10s infinite linear ;
+    animation:move-image1 10s infinite linear;
 }
-@-webkit-keyframes move-image{
-    0%{
-        left:0;
-    }
-    20%{
-        left:-675px;
-    }
-    50%{
-        left:-1350px;
-    }
-    70%{
-        left:-675px;
-    }
-    100%{
-        left:0;
-    }
+.slider-move:nth-child(2){
+    left:225px;
+    -moz-animation:move-image2 20s infinite linear;
+    -webkit-animation: move-image2 20s infinite linear ;
+    animation:move-image2 20s infinite linear;
+}
+.slider-move:nth-child(3){
+    left:450px;
+    -moz-animation:move-image3 10s infinite linear;
+    -webkit-animation: move-image3 10s infinite linear ;
+    animation:move-image3 10s infinite linear;
+}
+.slider-move:nth-child(4){
+    left:675px;
+    -moz-animation:move-image4 10s infinite linear;
+    -webkit-animation: move-image4 10s infinite linear ;
+    animation:move-image4 10s infinite linear;
+}
+.slider-move:nth-child(5){
+    left:900px;
+    -moz-animation:move-image5 10s infinite linear;
+    -webkit-animation: move-image5 10s infinite linear ;
+    animation:move-image5 10s infinite linear;
+}
+.slider-move:nth-child(6){
+    left:1125px;
+    -moz-animation:move-image6 10s infinite linear;
+    -webkit-animation: move-image6 10s infinite linear ;
+    animation:move-image6 10s infinite linear;
 }
 .another-slider{
     width: 68vw;
@@ -189,24 +204,7 @@ a:link{
     display: inline-block;
     border-radius: 4px;
 }
-.slider-move:nth-child(1){
-    left:0;
-}
-.slider-move:nth-child(2){
-    left:225px;
-}
-.slider-move:nth-child(3){
-    left:450px;
-}
-.slider-move:nth-child(4){
-    left:675px;
-}
-.slider-move:nth-child(5){
-    left:900px;
-}
-.slider-move:nth-child(6){
-    left:1125px;
-}
+
 .slider-ul a{
     height: 175px;
     width:230px;
@@ -294,7 +292,7 @@ div.slider-ul div{
 .cards-2 div h4{
     width:240px;
 }
-.news div{
+.news div.news-section{
     position:relative;
     top:-14px;
     background: #000;
@@ -303,7 +301,7 @@ div.slider-ul div{
     padding-right: 25px;
     color: white;
     font-size: .9rem;
-    height: 255px;
+    height: 250px;
 }
 .news{
     border-bottom-left-radius: 10px;
@@ -314,11 +312,45 @@ div.slider-ul div{
     position:relative;
     top:-14px;
     background: #000;
-    padding-top: 30px;
+    padding-top: 50px;
     padding-left:15px;
     padding-right: 25px;
+    padding-bottom: 60px;
     color: white;
     font-size: .9rem;
+}
+.news-divisor{
+    position:relative;
+    height: 150px;
+    overflow: hidden;
+}
+.news a{
+    position:relative;
+    z-index: 10;
+    padding-top: 10px;
+}
+.news-divisor img{
+    position:absolute;
+    bottom:0;
+    top:0;
+    left:0;
+    right: 0;
+    margin:0 auto;
+}
+.news-section p{
+    padding-bottom: 15px;
+}
+.news-section h5{
+    font-size: 1.5rem;
+}
+.news-section  img{
+    float: left;
+    margin-top:10px;
+    margin-right: 15px;
+    padding:5px;
+    border: 1px solid white;
+    height: 200px;
+    width: 200px;
 }
 .card-content{
     border-bottom-left-radius: 10px;
