--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,86 @@
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
 }
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 45; /* Sit on top */
+    padding-top: 6%; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+     /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    position: relative;
+    display: grid;
+    justify-content: center;
+    background-color: rgba(0,0,0,.9);
+    margin: -5% auto;
+    padding-bottom: 100px;
+    border: 1px solid #888;
+    width: 95%;
+    overflow: auto;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+    color: rgba(255 , 255, 255, 0.5)!important;
+    float: right;
+    font-size: 4rem;
+    font-weight: bold;
+    width: 100px!important;
+    height: 100px!important;
+    position: absolute;
+    right: 0;
+    margin:0!important;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-header {
+    padding: 2px 16px;
+    height: 100px;
+}
+
+.modal-body {
+    padding: 0 10%;
+    height: 95%;
+}
+
+.modal-footer {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+    display:none;
+}
 
 @font-face {
 	font-family: play;
@@ -204,9 +284,13 @@ a:link{
     transform: scaleX(-1)
 }
 ul.content-slider li{
-    width: 20%; 
+    width: 35%; 
     height: 175px;
     cursor: pointer;
+}
+ul.content-slider label{
+    height: 175px;
+    width: 100%;
 }
 .slider-container{
     width: 60vw;
@@ -216,6 +300,7 @@ ul.content-slider li{
 .content-slider{
     border: solid 1px #000;
     display:flex;
+    height: 175px;
     width: 1700px;
     background: #000;
 }
@@ -561,14 +646,14 @@ div.slider-ul div{
 .modal-body img{
     margin-top: 40px;
     margin-bottom: 40px;
-    width: 80%;
+    width: 100%;
 }
 .modal-btn{
     display:none;
 }
 .modal-body p{
     align-content: end;
-    width: 80%;
+    width: 100%;
     letter-spacing: 1px;
     color: #fff;
 }
@@ -579,10 +664,9 @@ div.slider-ul div{
 }
 .modal-body h5{
     justify-self: start;
-    margin-left: 10%;
     font-weight: bold;
-    font-size: 2rem;
-    color: #fff;
+    font-size: 2.3rem;
+    color: rgba(255,255,255,.8);
 }
 .modal-body p , .modal-body img {
     justify-self: center;
