--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,168 @@
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
 }
+
+/* MultiSlider ######################################################*/
+.mixedSlider-container{
+    position: relative;
+    width: 1000px;
+    margin: auto;
+}
+
+#mixedSlider .MS-content {
+  position: relative;  
+  white-space: nowrap;
+  overflow: hidden;
+  margin: 0 auto;
+  width: 1000px;
+}
+
+#mixedSlider .MS-content .item {
+  margin-top: 50px;
+  background: #000;
+  display: inline-block;
+  width: 33.3333%;
+  position: relative;
+  vertical-align: top;
+  overflow: hidden;
+  height: 100%;
+  white-space: normal;
+  padding: 10px 10px;
+}
+
+#mixedSlider .MS-content .item .imgTitle {
+  position: relative;
+}
+#mixedSlider .MS-content .item .imgTitle .blogTitle {
+  margin: 0;
+  text-align: left;
+  letter-spacing: 2px;
+  color: #252525;
+  font-style: italic;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 100%;
+  bottom: 0;
+  font-weight: bold;
+  padding: 0 0 2px 10px;
+}
+#mixedSlider .MS-content .item .imgTitle img {
+  height: auto;
+  width: 100%;
+  cursor: pointer;
+}
+#mixedSlider .MS-content .item .imgTitle img:hover{
+    opacity: .4;
+}
+#mixedSlider .MS-content .item p {
+  font-size: 16px;
+  margin: 2px 10px 0 5px;
+  text-indent: 15px;
+}
+#mixedSlider .MS-content .item a {
+  float: right;
+  margin: 0 20px 0 0;
+  font-size: 16px;
+  font-style: italic;
+  color: rgba(173, 0, 0, 0.82);
+  font-weight: bold;
+  letter-spacing: 1px;
+  transition: linear 0.1s;
+}
+#mixedSlider .MS-content .item a:hover {
+  text-shadow: 0 0 1px grey;
+}
+#mixedSlider .MS-controls button {
+  cursor: pointer;
+  position: absolute;
+  border: none;
+  background-color: transparent;
+  outline: 0;
+  font-size: 50px;
+  top: 95px;
+  opacity: .4;
+  transition: 0.15s linear;
+}
+#mixedSlider .MS-controls button:hover {
+  opacity: 1;
+}
+
+#mixedSlider .MS-controls .MS-left {
+  top: 120px;
+  left: 50px;
+  width: 50px;
+  height: 100px;
+}
+#mixedSlider .MS-controls .MS-left img{
+    width: 100%;
+}
+#mixedSlider .MS-controls .MS-right img {
+  width: 100%;
+  transform: scaleX(-1);
+}
+
+#mixedSlider .MS-controls .MS-right {
+  top: 120px;
+  right: 50px;
+  width: 50px;
+  height: 100px;
+}
+
+#basicSlider { position: relative; }
+
+#basicSlider .MS-content {
+  white-space: nowrap;
+  overflow: hidden;
+  margin: 0 2%;
+  height: 50px;
+}
+
+#basicSlider .MS-content .item {
+  display: inline-block;
+  width: 20%;
+  position: relative;
+  vertical-align: top;
+  overflow: hidden;
+  height: 100%;
+  white-space: normal;
+  line-height: 50px;
+  vertical-align: middle;
+}
+
+#basicSlider .MS-content .item a {
+  line-height: 50px;
+  vertical-align: middle;
+}
+
+#basicSlider .MS-controls button { position: absolute; }
+
+#basicSlider .MS-controls .MS-left {
+  top: 35px;
+  left: 10px;
+}
+
+#basicSlider .MS-controls .MS-right {
+  top: 35px;
+  right: 10px;
+}
+
+.description{
+    display: block!important;
+}
+.server-container{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+#onlines-count , #server-state{
+    display: inline-block;
+}
+#server-state , #onlines-count span{
+    font-weight: bold;
+}
+#count{
+    font-weight: normal!important;
+}
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
@@ -23,7 +185,6 @@
 /* Modal Content */
 .modal-content {
     position: relative;
-    display: grid;
     justify-content: center;
     background-color: rgba(0,0,0,.9);
     margin: -5% auto;
@@ -94,11 +255,21 @@
 	font-family: masseffect;
 	src:url(../fonts/me123.ttf);
 }
+/* Online Button#########################################################################*/
+.online-button{
+    background:red;
+    color:white;
+    position:fixed;
+    right:10px;
+    width: 150px;
+    height:50px;
+    padding: 10px;
+}
 /* Divisor #############################################################################*/
 .line{
     width: 100%;
     height: 20px;
-    background: linear-gradient(to bottom, rgb(49, 49, 49) 0%,rgb(39, 39, 39) 65%,rgb(149, 25, 25) 66%,rgb(149, 25, 25) 100%);
+    background: linear-gradient(to bottom, rgb(49, 49, 49) 0%,rgb(39, 39, 39) 65%,rgb(251, 5, 5) 66%,rgb(119, 3, 3) 100%);
 }
 
 body{
@@ -112,33 +283,42 @@ body{
 }
 /* Menu #######################################################################################*/
 .nav-w{
-    width: 68vw;
+    width: 1050px;
     margin:auto;
 
 }
-.nav-w li a{
+.li-container{
+    display:flex;
+    width: 100%;
+}
+.li-nav a{
+    font-size: 1.3rem;
     display:block;
-    padding:15px 20px;
+    padding: 5px 20px;
     color:white;
 }
-.nav-w li{
+.li-nav{
+    border-radius: 4px;
+    margin-right: 5px;
+    background: linear-gradient(to bottom, rgb(86, 86, 86) 0%,rgb(31, 33, 33) 50%,rgb(0, 0, 0) 51%,rgb(12, 12, 12) 100%);
     font-weight: bold;
     list-style: none;
     width: 25%;
     text-align: center;
 }
-.nav-w li:hover{
-    background: rgb(105, 104, 104);
-    border-radius: 10px;
-    font-size: 1.2rem;
+.li-active {
+    background: linear-gradient(to bottom, rgb(223, 69, 69) 0%,rgb(230, 62, 62) 50%,rgb(179, 10, 10) 51%,rgb(214, 4, 4) 100%)!important;
+}
+.li-nav:hover{
+    background: linear-gradient(to bottom, rgb(223, 69, 69) 0%,rgb(230, 62, 62) 50%,rgb(179, 10, 10) 51%,rgb(214, 4, 4) 100%);
+ 
 }
 .nav-w ul{
+    height: 38px;
     display:flex;
     position: relative;
-    left: -25px;
-    top: -5px;
-    border-radius: 10px;
-    background: rgb(19, 18, 18);
+    left: -30px;
+    top: 5px;
     width: 100%;
 }
 #ironAo-menu input{
@@ -175,18 +355,19 @@ a:link{
     bottom:5px;
 }
 #ironAo-menu{
+    width: 65%;
     padding:0;
 }
 .ironAo-icon{
     top:-12px;
     margin:0;
     padding:0;
-    width: 35%;
+    width: 37%;
     position:relative;
     z-index: 20;
 }
 .ironAo-icon a{
-    width: 100%;
+    width: 95%;
     margin:0;
 }
 .h1 {
@@ -195,7 +376,7 @@ a:link{
 }
 
 .h1 strong{
-    color: rgb(172, 33, 33)
+    color:rgb(220, 11, 11);
 }
 
 .menu-buttons{
@@ -226,7 +407,7 @@ a:link{
 /* Slider ###############################################################################*/
 
 .slider{
-    width: 68vw;
+    width: 1000px;
     margin: auto;
     border-radius: 5px;
     border: 1px solid rgb(90, 89, 89);
@@ -269,115 +450,20 @@ a:link{
 }
 
 /* Another Slider ##############################################################*/
-.button-left , .button-right{
-    position:absolute;
-    top:40%;
-    width: 30px;
-    height: 50px;
-    display:none;
-    font-size: 2rem;
-    opacity: .5;
-    text-align: center;
-}
-.button-right{
-    right: 0;
-    transform: scaleX(-1)
-}
-ul.content-slider li{
-    width: 35%; 
-    height: 175px;
-    cursor: pointer;
-}
-ul.content-slider label{
-    height: 175px;
-    width: 100%;
-}
-.slider-container{
-    width: 60vw;
-    margin: auto;
-    overflow: hidden;
-}
-.content-slider{
-    border: solid 1px #000;
-    display:flex;
-    height: 175px;
-    width: 1700px;
-    background: #000;
-}
-.slider-div{
-    width: 68vw;
-    position: relative;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-.slider-div img{
-    width: 95%;
-    height :100%;
-} 
-.another-slider{
-    width: 68vw;
-    margin:auto;
-}
-.imagenes-slider{
-    height: 175px;
-    padding: 14px 5px;
-}
-.slider-ul{
-    position: relative;
-    margin-left: 40px;
-    height: 175px;
-    width: 91%;
-    overflow: hidden;
-    background:#000;
-    border: 1px solid grey;
-    display: inline-block;
-    border-radius: 4px;
-}
 
-.slider-ul a{
-    height: 175px;
-    width:230px;
-    display:block;
-}
-
-.after img , .after{
-    display:inline-block;
-    position: absolute;
-    z-index:5;
-    width: 40px;
-    height: 175px; 
-    top:0;
-    right: 0;
-    cursor: pointer;
-}
-
-.before img , .before{
-    display:inline-block;
-    position: absolute;
-    z-index:5;
-    width: 40px;
-    height: 175px; 
-    cursor: pointer;
-}
-
-div.slider-ul div{
-    width: 230px;
-    height: 175px;
-    position: absolute;
-}
 
 /*Cards###############################################################*/
 .cards-3{
     width: 100%!important;
 }
 .cards-div2{
-    width: 68vw;
+    width: 1000px;
     margin:auto;
     margin-top: 50px;
     margin-bottom: 40px;
 }
 .cards-div{
-    width: 68vw;
+    width: 1000px;
     margin:auto;
     height: 350px;
     margin-top: 50px;
@@ -435,6 +521,7 @@ div.slider-ul div{
     color: white;
     font-size: .9rem;
     max-height: 600px;
+    min-height: 250px;
 }
 .news{
     border-bottom-left-radius: 10px;
@@ -453,7 +540,7 @@ div.slider-ul div{
     font-size: .9rem;
 }
 .new-notice{
-    max-height: 600px;
+    max-height: 800px;
 }
 .news-divisor{
     position:relative;
@@ -484,8 +571,9 @@ div.slider-ul div{
 }
 .news-section  img{
     float: left;
-    margin-top:10px;
+    margin-top:20px;
     margin-right: 25px;
+    margin-bottom: 15px;
     padding:5px;
     border: 1px solid white;
     height: 200px;
@@ -512,7 +600,6 @@ div.slider-ul div{
     height: 295px;
 }
 .card-content p, .news p{
-    margin-bottom: 1rem;
     max-height: 400px;
     overflow:hidden;
     display:inline;
@@ -552,8 +639,7 @@ div.slider-ul div{
 
 .video-trailer{
     margin:auto;
-    width: 68vw;
-    max-height: 470px;
+    width: 1000px;
 }
 
 .video1 h4{
@@ -596,7 +682,7 @@ div.slider-ul div{
     border: 1px solid rgba(255 , 255, 255, 0.2);
     border-radius: 5px;
     margin:auto;
-    width: 68vw;
+    width: 1000px;
     height: 60px;
     background:#000;
     margin-top: 20px;
@@ -640,7 +726,6 @@ div.slider-ul div{
     background: rgb(29, 27, 27);
 }
 .modal1 .modal-body{
-    display:grid;
     justify-content: center;
 }
 .modal-body img{
@@ -656,6 +741,7 @@ div.slider-ul div{
     width: 100%;
     letter-spacing: 1px;
     color: #fff;
+    padding-bottom: 50px;
 }
 .modal-header span{
     color:white;
@@ -671,9 +757,17 @@ div.slider-ul div{
 .modal-body p , .modal-body img {
     justify-self: center;
 }
+.modal-link{
+    color:#6d5f5f;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+.modal-link:hover{
+    color:rgb(119, 3, 3);
+}
 /* Media Querys ######################################################*/
 
-@media screen and (max-width: 1200px)and (min-width: 1001px){
+@media screen and (max-width: 1200px)and (min-width: 1051px){
   .menu-buttons{
       max-width: 23%;
   }  
@@ -688,6 +782,9 @@ div.slider-ul div{
   }
   .card-table{
     height: 300px;
+}
+.news div.news-section{
+    min-height: 250px;
 }
 }
 @media screen and (max-width: 630px){
@@ -708,42 +805,30 @@ div.slider-ul div{
 
     }
 }
-@media screen and (max-width: 1000px){
-   
+@media screen and (max-width: 1050px){
     .slider-div{
-        width: 70vw;
+        width: 100%;
     }
-
-    #ironAo-menu label{
-        width: 70px;
-        height: 55px;
-        background: linear-gradient(to bottom, rgb(86, 86, 86) 0%,rgb(47, 48, 48) 50%,rgb(5, 5, 5) 51%,rgb(0, 0, 0) 100%);
-        position: relative;
-        top:-10px;
-        left: 40px;
-        border-radius: 3px;
+    .another-slider , .slider-container , .cards-div , .video-trailer, .cards-div2{
+        width: 90%;
     }
-    #ironAo-menu label span{
-        font-weight: bold;
-        width: 50px;
-        height: 50px;
-        margin:auto;
-        display: block;
-        border-radius: 3px;
+    .video-trailer{
+        margin-top: 50px;
     }
-
     body{
         background-size: 100vw 100vh;
     }
     .another-slider{
         position: relative;
-        left: -10px;
     }
     .slider-ul{
         width:87%;
     }
+    .footer{
+        width: 90%;
+    }
     .footer-text h4{
-        font-size: .8rem;
+        font-size: 1.3rem;
     }
     .fotter-img{
         height: 20px;
@@ -754,7 +839,7 @@ div.slider-ul div{
         width: 15px;
     }
     .h4-2{
-        font-size:.5rem!important;
+        font-size:.9rem!important;
         padding-right: 10px;
     }
     .cards-div{
@@ -766,7 +851,6 @@ div.slider-ul div{
         height: 290px;
     }
     .card-table{
-        height: 325px;
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
     }
@@ -778,7 +862,7 @@ div.slider-ul div{
     }
     .cards-21{
         display:block;
-        width: 68vw;
+        width: 90%;
         height:250px;
         margin-bottom:40px;
     }
@@ -790,6 +874,12 @@ div.slider-ul div{
     }
     .slider-description{
         display: block!important;
+    }
+    .nav-w{
+        width: 95%;
+    }
+    .slider{
+        width: 90%;
     }
 }
 @media screen and (max-width:750px){
@@ -828,23 +918,14 @@ div.slider-ul div{
         height: 255px;
     }
 }
-@media screen and (max-width: 999px)and (min-width: 700px){
-    .nav-w ul{
-        display:block!important;
-        position:absolute!important;
-        left:-62vw;
-        top:-10px;
-        border-radius: 0;
-        width: 100vw;
-        padding-top:50px;
-        z-index: 20;
-        height: 50vh;
-        transform: translateX(-100%);
-        transition: all 0.5s;
+@media screen and (max-width: 900px)and (min-width: 700px){
+
+    .li-nav{
+        margin-right:2px;
+        font-size: 1.1rem;
     }
-    .nav-w ul li{
-        height: 25%;
-        width:100vw;
+    .li-nav a{
+        font-size: 1.1rem;
     }
     #ironAo-menu label {
         z-index: 40;
@@ -855,11 +936,37 @@ div.slider-ul div{
     #btn-menu:checked ~ .icon-menu{
         background: red;
     }
-    #btn-menu:checked ~ .span-icon{
+    #btn-menu:checked ~ .label-span{
         display:none!important;
     }
 }
 @media screen and (max-width: 700px){
+    #ironAo-menu label{
+        border: solid 1px #fff;
+        width: 90px!important;
+        height: 75px!important;
+        background: red;
+        background-size: 100%;
+        position: absolute;
+        top:-10px;
+        right: 20px;
+        border-radius: 3px;
+        z-index: 105!important;
+    }
+    .label-span{
+        background-image: url("../img/menu-icon2.png");
+        background-size: 100%;
+        background-repeat: no-repeat;
+        font-weight: bold;
+        width: 70px!important;
+        height: 70px!important;
+        margin:auto;
+        display: block;
+        border-radius: 3px;
+    }
+    .menu-container{
+        display: flex;
+    }
     .after img , .before img {
         display:none;
     }
@@ -873,25 +980,50 @@ div.slider-ul div{
         display: block;
     }
     .nav-w ul{
+        position: fixed!important;
+        background: red;
         display:block!important;
-        position:absolute!important;
-        left:-62vw;
-        top:-10px;
+        left:-13px;
+        top:0;
         border-radius: 0;
         width: 100vw;
-        padding-top:50px;
         z-index: 20;
         height: 100vh;
         transform: translateX(-100%);
         transition: all 0.5s;
+        z-index: 100;
     }
-    .nav-w ul li{
-        height: 25%;
-        width:100vw;
+    .li-active{
+        background: red!important;
+    }
+    .li-nav{
+        grid-column: 2 / span 1;
+        background: red;
+        width:100%;
         font-size: 2.5rem;
     }
-    .nav-w ul li:hover{
-        font-size: 3rem;
+    .li-nav:nth-child(1){
+        grid-row: 4 / span 1
+    }
+    .li-nav:nth-child(2){
+        grid-row: 5 / span 1
+    }
+    .li-nav:nth-child(3){
+        grid-row: 6 / span 1
+    }
+    .li-nav:nth-child(4){
+        grid-row: 7 / span 1
+    }
+    .li-container{
+        display: grid;
+        width: 100%;
+        height: 100%;
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: repeat(12,1fr);
+    }
+    .li-nav a:hover , .li-nav:hover{
+        color: #888;
+        background: red;
     }
     #ironAo-menu label {
         z-index: 40;
@@ -902,6 +1034,12 @@ div.slider-ul div{
     }
     #btn-menu:checked ~ .icon-menu{
         background: red;
+        position: fixed!important;
+        top: 15px;
+        right: 33px;     
+    }
+    #btn-menu:checked ~ .spaneable{
+        display: none!important;
     }
 
     .news-section img{
@@ -921,20 +1059,6 @@ div.slider-ul div{
     .news-divisor{
         height: 100px;
     }
-}
-@media screen and (max-width: 650px){
-    #ironAo-menu label{
-        position:relative;
-        left:-30px!important;
-    }
-}
-@media screen and (max-width: 576px){
-    /*.menu-container{
-        background: linear-gradient(to bottom, rgb(86, 86, 86) 0%,rgb(47, 48, 48) 50%,rgb(5, 5, 5) 51%,rgb(0, 0, 0) 100%);
-    }
-    .sword{
-        display:none!important;
-    }*/
     .slider-div{
         width: 95%;
         left:20px;
@@ -965,33 +1089,105 @@ div.slider-ul div{
         width: 90vw;
     }
     .ironAo-icon{
-        width:55%;
-    }
-    #ironAo-menu label{
-        position:relative;
-        left:35px!important;
-    }
-    #ironAo-menu{
-        width: 40%;
+        width:70%;
     }
     .sword{
-        height: 55px;
+        height: 65px;
     }
     .ironAo-icon h1{
-        font-size: 1.7rem;
+        font-size: 2.2rem;
     }
     .footer-text h4{
-        font-size: .3rem;        
+        font-size: 1rem;        
+    }
+    .footer-text .h4-2{
+        font-size: .8rem!important;
     }
     .fotter-img{
-        height: 15px;
-        width: 15px;
+        height: 40px;
+        width: 40px;
     }
     .fotter-img2{
-        height: 10px;
-        width: 10px;
+        height: 20px;
+        width: 20px;
+    }
+    .footer-text{
+        background: #000;
+        border-radius: 3px;
+        border: solid 1px grey;
+        margin-bottom: 5px;
     }
     .footer{
-        height: 50px;
+        border: none;
+        height: 150px;
+        background: none;
     }
 }
+
+@media (max-width: 991px) {
+    #mixedSlider .MS-content .item {
+      width: 50%;
+    }
+  }
+  @media (max-width: 767px) {
+    #mixedSlider .MS-content .item {
+      width: 100%;
+    }
+  }
+
+  @media (max-width: 991px) {
+
+    #basicSlider .MS-content .item { width: 25%; }
+    }
+    @media (max-width: 767px) {
+    
+    #basicSlider .MS-content .item { width: 35%; }
+    }
+    #mixedSlider .MS-controls .MS-left {
+        top: 35%;
+        left: 50px;
+        width: 75px;
+        height: 150px;
+      }
+      #mixedSlider .MS-controls .MS-right {
+        top: 35%;
+        right: 50px;
+        width: 75px;
+        height: 150px;
+      }
+    @media (max-width: 500px) {
+    
+    #basicSlider .MS-content .item { width: 50%; }
+    }
+    
+    @media (max-width: 767px) {
+      }
+
+      @media (max-width: 992px) {
+        #mixedSlider .MS-controls button {
+          font-size: 30px;
+        }
+        .MS-content{
+            width: 90%!important;
+            margin-bottom: 40px!important;
+        }
+        .mixedSlider-container{
+            width: 90%!important;
+        }
+      }
+      @media (max-width: 767px) {
+        #mixedSlider .MS-controls button {
+          font-size: 20px;
+        }
+        .MS-content{
+            width: 90%!important;
+            margin-bottom: 40px!important;
+        }
+        .mixedSlider-container{
+            width: 90%!important;
+        }
+        
+      }
+      @media (max-width: 767px) {
+        
+      }
