--- a/css/styles.css
+++ b/css/styles.css
@@ -657,6 +657,7 @@ a:link{
     z-index: 10;
 }
 .video2{
+    height: 100vh;
     position: relative;
     background: #000;
     top:-17px;
@@ -665,7 +666,12 @@ a:link{
     border-bottom-right-radius: 10px;
     border-top-right-radius: 10px;
 }
-
+.video2 iframe{
+    width: 90%!important;
+    height: 80%!important;
+    margin-top: 7%;
+    margin-left: 5%;
+}
 .video-trailer div video{
     border: 1px solid rgba(255 , 255, 255, 0.5);
     width: 87%;
@@ -1161,6 +1167,9 @@ a:link{
     }
     
     @media (max-width: 767px) {
+        .video2{
+            height: 60vh;
+        }
       }
 
       @media (max-width: 992px) {
