--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,7 @@
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 45; /* Sit on top */
+    z-index: 250; /* Sit on top */
     padding-top: 6%; /* Location of the box */
     left: 0;
     top: 0;
@@ -543,6 +543,7 @@ a:link{
     max-height: 800px;
 }
 .news-divisor{
+    width: 100%;
     position:relative;
     height: 150px;
     overflow: hidden;
@@ -1053,13 +1054,13 @@ a:link{
         margin-bottom:15px;
     }
     .news-section{
-        max-height: 800px;
+        max-height: 1800px;
     }
     .new-notice{
-        max-height: 800px;
+        max-height: 1800px;
     }
     .news div.news-section{
-        max-height: 800px;
+        max-height: 1800px;
         padding-right: 15px;
     }
     .news-divisor{
